src/objects/Medical_Document_Question__c.object
<CustomObject>
    <fields>
        <fullName>Medical_Document__c</fullName>
        <label>Medical Document</label>
        <referenceTo>Medical_Documents__c</referenceTo>
        <relationshipLabel>Medical Document Questions</relationshipLabel>
        <relationshipName>Medical_Document_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Medical_Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Medical Script</label>
        <referenceTo>Medical_Script__c</referenceTo>
        <relationshipLabel>Medical Document Questions</relationshipLabel>
        <relationshipName>Medical_Document_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>Medical_Script__r.Question__c</formula>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Medical Document Question</label>
    <nameField>
        <displayFormat>MDQ-{0000}</displayFormat>
        <label>Medical Document Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Document Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>